--- a/tutorials/tutorials.yml
+++ b/tutorials/tutorials.yml
@@ -3526,7 +3526,7 @@
   laguage: ru
   date: 2021-08-09
   authors:
-    - Frontend Connect
+    - yestellar
   source: https://youtube.com/
   image_url: https://i.ytimg.com/vi/8-AweO-cshw/hq720.jpg
   use_case: Authorization
