--- a/tutorials/tutorials.yml
+++ b/tutorials/tutorials.yml
@@ -3527,6 +3527,8 @@
   date: 2021-08-09
   authors:
     - yestellar
+  github_authors:
+    - yestellar
   source: https://youtube.com/
   image_url: https://i.ytimg.com/vi/8-AweO-cshw/hq720.jpg
   use_case: Authorization
