Add pick.eat.up to sites.yml

--- a/showcase/sites.yml
+++ b/showcase/sites.yml
@@ -960,3 +960,15 @@
     - Bootstrap
   made_by: Gaylord Julien
   made_by_url: https://www.gaylordjulien.dev/
+- title: pick.eat.up.
+  url: https://pickeatup.io/
+  description: The pick.eat.up app. is a great tool to the fight against food waste. Pick.eat.up. app with delicious offers in your area at very economical prices.
+  categories:
+    - E-commerce
+    - Food
+  frontend:
+    - React.js
+    - React-Native
+    - Next.js
+  made_by: Mariusz Witkowski, Artur Szady
+  made_by_url: https://github.com/MariuszWitkowski
