--- a/showcase/sites.yml
+++ b/showcase/sites.yml
@@ -972,3 +972,14 @@
     - Next.js
   made_by: Mariusz Witkowski, Artur Szady
   made_by_url: https://github.com/MariuszWitkowski
+ - title: Mailmodo's Email Markeing blog
+  url: https://www.mailmodo.com/guides/
+  description:  Mailmodo's email marketing blog to learn about email marketing, email infrastructure, deliverability, tools and software, best practices and AMP emails
+  categories:
+    - Corporate website
+    - Blog
+  frontend:
+    - Next.js
+    - Ant Design
+  made_by: Mailmodo
+  made_by_url: https://www.mailmodo.com
