--- a/showcase/sites.yml
+++ b/showcase/sites.yml
@@ -1125,3 +1125,14 @@
     - Tailwind
   made_by: Virbe Sp. z o.o.
   made_by_url: https://virbe.ai/
+- title: Pariscabane
+  url: https://www.pariscabane.fr
+  description: Parisian real estate agency for outstanding and singular places to live. Strapi is used to manage all offers and content.
+  categories:
+    - E-commerce
+    - Catalogue
+    - Corporate website
+  frontend:
+    - Next.js
+  made_by: Ultrō
+  made_by_url: https://ultro.agency
