--- a/showcase/sites.yml
+++ b/showcase/sites.yml
@@ -1224,4 +1224,14 @@
     - Next.js
   made_by: Ultrō
   made_by_url: https://ultro.agency
-
+- title: Caroline Bazin - Studio 25ème Image
+  url: https://www.cablogrammes.fr/
+  description: Professional photographer, Caroline Bazin, portfolio website
+  categories:
+    - Corporate website
+    - Portfolio
+  frontend:
+    - Next.js
+    - Tailwind
+  made_by: Gaylord Julien, Sarah Kügel
+  made_by_url: https://www.gaylordjulien.dev
