--- a/showcase/sites.yml
+++ b/showcase/sites.yml
@@ -1225,7 +1225,7 @@
   made_by: Ultrō
   made_by_url: https://ultro.agency
 - title: Caroline Bazin - Studio 25ème Image
-  url: https://www.cablogrammes.fr/
+  url: https://www.carolinebazin.fr/
   description: Professional photographer, Caroline Bazin, portfolio website
   categories:
     - Corporate website
