--- a/showcase/sites.yml
+++ b/showcase/sites.yml
@@ -1224,4 +1224,13 @@
     - Next.js
   made_by: Ultrō
   made_by_url: https://ultro.agency
-
+- title: Single Technologies
+  url: https://singletechnologies.com
+  description: Website for a life science technology startup developing a radical new way to sequence DNA.
+  categories:
+    - Corporate website
+  frontend:
+    - Astro
+    - Tailwind
+  made_by: Jakob Persson (Leancept)
+  made_by_url: https://www.leancept.com
