--- a/showcase/sites.yml
+++ b/showcase/sites.yml
@@ -1,3 +1,16 @@
+- title: Abhimanyu Garbhsanskar
+  url: https://garbhsanskar.co.in
+  description: Event, Workshop, E-commerce, and many more backends with strapi, Website on Next JS, Android & IOS app
+  categories:
+    - Workshop Management
+    - E-commerce
+    - Event
+    - Course
+  frontend:
+    - Next.js
+    - React Native
+  made_by: Gulshan Prajapati
+  made_by_url: https://www.touchmediaads.com
 - title: Ways&Villas
   url: https://waysandvillas.com/
   description: Ways & Villas is a premier luxury travel concierge providing curated luxury travel experiences in the Maldives
