--- a/.github/ISSUE_TEMPLATE/content-request.yml
+++ b/.github/ISSUE_TEMPLATE/content-request.yml
@@ -20,13 +20,6 @@ body:
       description: Provide they key things the reader will learn. 
     validations:
       required: true
-  - type: textarea
-    id: target-audience
-    attributes:
-      label: Who are your target audience?
-      description: Provide who this article is for (separated by commas). 
-    validations:
-      required: true
   - type: dropdown
     id: author-expertise
     attributes:
@@ -47,7 +40,6 @@ body:
         - Tutorial
         - Best Practices
         - Use cases and case studies
-        - Engineering
         - Comparison Article
         - Other
     validations:
@@ -57,11 +49,5 @@ body:
     attributes:
       label: Terms & Conditions
       options:
-        - label: You understand that submitting this form does not mean we accept your proposal. We will accept proposals at our discretion. 
-          required: true
-        - label: You understand that to be paid you will need to generate an invoice to us once the final draft of your work is completed. 
-          required: true
-        - label: You understand that you will grant us an unlimited license to post and promote your work as part of this program. You may repost, but using our copy as the canonical source.
-          required: true
-        - label: You are aged 18 or over.
+        - label:  I have read the Write for the Community program guidelines. 
           required: true
