Update and rename content-request.yml to blog-content-proposal.yml

--- a/.github/ISSUE_TEMPLATE/blog-content-proposal.yml
+++ b/.github/ISSUE_TEMPLATE/blog-content-proposal.yml
@@ -1,5 +1,5 @@
-name: Blog Post Proposal
-description: Topic idea / suggestions from writer
+name: Content Proposal From Writer
+description: Propose a content idea
 assignees: Theodore
 body:
   - type: markdown
