--- a/.github/ISSUE_TEMPLATE/blog-content-proposal.yml
+++ b/.github/ISSUE_TEMPLATE/blog-content-proposal.yml
@@ -1,3 +1,4 @@
 name: Write For Community Update
 description: Due to the high volume of submissions, we are no longer accepting new articles at this time. Please choose from the existing articles labeled "Looking for Author."
 assignees: Theodore
+body: Please select one of the existing topic labeled "Looking for Author."
