--- a/.github/ISSUE_TEMPLATE/blog-content-proposal.yml
+++ b/.github/ISSUE_TEMPLATE/blog-content-proposal.yml
@@ -1,3 +1,53 @@
-name:
-description:
+name: Content Proposal From Writer
+description: Propose a content idea
+assignees: Theodore
 body:
+  - type: markdown
+    attributes:
+      value: |
+        Thank you for your time.
+  - type: textarea
+    id: idea
+    attributes:
+      label: What is your article idea?
+      description: Give us as much detail as possible.
+    validations:
+      required: true
+  - type: textarea
+    id: key-objectives
+    attributes:
+      label: What are the objectives of your article?
+      description: Provide they key things the reader will learn. 
+    validations:
+      required: true
+  - type: dropdown
+    id: author-expertise
+    attributes:
+      label: What is your expertise as a developer or writer?
+      description: This helps us understand you better as an author.
+      options:
+        - Beginner
+        - Intermediate
+        - Advance
+    validations:
+      required: true
+  - type: dropdown
+    id: content-type
+    attributes:
+      label: What type of post is this?
+      description: This helps us understand the rough structure and effort needed.
+      options:
+        - Tutorial
+        - Best Practices
+        - Use cases and case studies
+        - Comparison Article
+        - Other
+    validations:
+      required: true
+  - type: checkboxes
+    id: terms
+    attributes:
+      label: Terms & Conditions
+      options:
+        - label:  I have read the Write for the Community program guidelines. 
+          required: true
